[FIX] spacing

--- a/src/partials/_entry.scss
+++ b/src/partials/_entry.scss
@@ -102,7 +102,7 @@
             justify-content: space-between;
 
             &>ul {
-                margin: 1em 0.5em 0 0.5em;
+                margin: 1.25em 0.5em 0 0.5em;
 
                 @include xs-max {
                     margin: 0;
