--- a/src/utils/_common.scss
+++ b/src/utils/_common.scss
@@ -33,6 +33,10 @@ img {
     }
 }
 
+br {
+    visibility: hidden;
+}
+
 .helpers {
     position: absolute;
     top: -3.8em;
